# Cpu-Scheduling-

./: README.md  start.sh
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.css  App.jsx  index.css
dashboard/src/components/: ArenaView.jsx  GanttChart.jsx  ProcessForm.jsx  QuantumAnalyzer.jsx  StatsPanel.jsx
dashboard/src/hooks/: useSimulation.js
dashboard/src/utils/: api.js  colors.js
engine/: CMakeLists.txt  output.json
engine/src/: edf.h  engine.cpp  engine.h  event.h  fcfs.h  generators.h  lottery.h  main.cpp  mlfq.h  mlq.h  pcb.h  priority.h  rr.h  scheduler.h  sjf.h
